--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -83,6 +83,6 @@
   {% endif %}
 
   {% if show_lease_price %}
-    <p> Or lease for  {{ price | divided_by: 12 | money }}</p>
+    <p> or lease for  {{ product.metafields.firmhouse.subscription_price |  replace: '.', '' | money  }}</p>
   {% endif %}
 </div>
