new tab issue on blog page

--- a/sections/main-blog.liquid
+++ b/sections/main-blog.liquid
@@ -93,7 +93,9 @@
         </div>
       {% endif %}
 
-      <h2>{{ article.title | escape | link_to: article.url }}</h2>
+      <h2>
+        <a href="{{ shop.url }}{{ article.url }}">{{ article.title | escape }}</a>
+      </h2>
 
       {%- if section.settings.show_excerpts -%}
         <div class="rte cf">
