--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1381,6 +1381,7 @@
   .tracer-map__text p{
     font-size: 14px !important;
     font-family: "Basic Commercial", sans-serif !important;
+    font-weight: 400 !important;
   }
 
   .tracer-map__text p::after {
