--- a/snippets/price.liquid
+++ b/snippets/price.liquid
@@ -82,14 +82,14 @@
     </div>
   {% endif %}
 
-  {% if show_lease_price %}
+  {% comment %} {% if show_lease_price %}
     {% assign subscription_price = product.metafields.firmhouse.subscription_price %}
-    {%  assign decimal_point = subscription_price |  split: '.' | last | size %}
+    {%  assign price = subscription_price |  remove: '.'  %}
+    <p> or lease for {{ price | money }}</p>
+  {% endif %} {% endcomment %}
 
-    {% if decimal_point  == 1 %}
-     <p> or lease for  €{{ subscription_price | append: '0' }}</p>
-    {% else %}
-     <p> or lease for  €{{ subscription_price }}</p>
-    {% endif %}
+  {% if show_lease_price %}
+    {% assign subscription_price = product.metafields.firmhouse.subscription_price | times: 100 | money %} 
+    <p> or lease for {{ subscription_price |  remove_last: '0' }}</p> 
   {% endif %}
 </div>
