payment icons on PDP

--- a/assets/main.css
+++ b/assets/main.css
@@ -12533,5 +12533,5 @@ model-viewer .container {
   align-items: center;
   justify-content: center;
   gap: 5px;
-  margin: 0px 0 40px;
+  margin: 0 0 40px;
 }
