payment icons on PDP

--- a/assets/main.css
+++ b/assets/main.css
@@ -12531,7 +12531,7 @@ model-viewer .container {
 .pdp__payment-icons {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   gap: 5px;
   margin: 0 0 40px;
 }
