--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -629,7 +629,7 @@
                               id="leaseBtn"
                               class="btn btn--large lease-btn"
                             >
-                              Lease →
+                              Lease
                             </button>
                             <p class="size-not-for-lease" style="display: none">
                               This size is not available for lease at the moment, please check again later.
