--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1271,7 +1271,8 @@
 <script>
   document.addEventListener('on:cart:after-merge', () => {
     const currency = {{ shop.currency | json }}
-
+    console.log(">>", currency);
+    
     fetch('/cart.js')
       .then((response) => response.json())
       .then((cart) => {
