--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1290,7 +1290,7 @@
         if (checkoutButtonContainer) {
           if (isLease) {
             const url = new URL(window.location.href); // Get the current URL
-            url.searchParams.set('currency', currency); // Set or update the query parameter
+            url.searchParams.set('currency', currency.toLowerCase()); // Set or update the query parameter
             window.history.pushState({}, '', url);
             checkoutButtonContainer.innerHTML = `<button onclick="handleFirmHouseCheckout()" class="btn btn--large btn--wide">Checkout</button>`;
           } else {
