--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -744,7 +744,7 @@
                     </summary>
                     <div class="disclosure__panel has-motion">
                       <div class="disclosure__content rte cf">
-                        {% if block.settings.title == 'Sustainability' %}
+                        {% if block.settings.title == 'Product Transparency' %}
                           <div class="sustainability-wrapper">
                             <p>Read more about</p>
                             <div class="tex-tracer-app-wrapper">
@@ -1411,9 +1411,9 @@
   });
 </script>
 
+{% # theme-check-disable %}
 <script src="https://cdn.shopify.com/extensions/afe6c813-07ad-4629-be96-b1700c2156ed/tex-tracer-32/assets/loadScripts.js"></script>
-
-
+{% # theme-check-enable %}
 
 <script type="application/json" id="texTracerBlockOptions">
 {
