--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -745,7 +745,7 @@
                     </summary>
                     <div class="disclosure__panel has-motion">
                       <div class="disclosure__content rte cf">
-                        {% if block.settings.title == 'Product Transparency' %}
+                        {% if block.settings.title == 'Product Transparency' or block.settings.title == 'Duurzaamheid' or block.settings.title == 'Durabilité' or block.settings.title == 'Nachhaltigkeit' %}
                           <div class="sustainability-wrapper">
                             <div class="tex-tracer-app-wrapper">
                               <div class="tex-tracer-app" data-shop-name="{{- shop.permanent_domain -}}" data-product-id="{{- product.id -}}">
