--- a/snippets/structured-data-product.liquid
+++ b/snippets/structured-data-product.liquid
@@ -41,6 +41,20 @@
       {%- for variant in product.variants -%}
         {
           "@type" : "Offer",
+          "shippingDetails": {
+            "@type": "OfferShippingDetails",
+            "shippingRate": {
+              "@type": "MonetaryAmount",
+              "value": "0.00",
+              "currency": "{{ shop.currency }}"
+            }
+          },
+          "hasMerchantReturnPolicy": {
+            "@type": "MerchantReturnPolicy",
+            "url": "{{ shop.url }}/pages/returns-exchanges-mud-jeans",
+            "returnPolicyCategory": "https://schema.org/FreeReturn",
+            "merchantReturnDays": 30
+          },
           {%- if variant.sku != blank -%}
             "sku": {{ variant.sku | json }},
           {%- endif -%}
@@ -120,7 +134,8 @@
               {{ sameAs_json | remove_last: ',' }}
             ]
           }
-        }{% unless forloop.last %},{% endunless %}
+        }
+      {% unless forloop.last %},{% endunless %}
       {%- endfor -%}
     ]
   }
